syntax = "proto3";

option java_package = "grpc";

message Empty{}

/* MODELO */
message TransaccionDTO{
	int32 idRegistro = 1;
	int32 idProducto = 2;
	int32 idComprador = 3;
	int32 idVendedor = 4;
	string nombre = 5;
	int32 cantidad = 6;
	double precio = 7;
}

/* RESPUESTA */
message ServerResponse{
	int32 code = 1;
	string msg = 2;
}

/* RECIBE PEDIDO DE LISTADO DE REGISTROS DE COMPRA CON ID USUARIO */
message GetAllComprasByUsuarioIdRequest{
	string idUsuario = 1;
}

/* RECIBE PEDIDO DE LISTADO DE REGISTROS DE VENTA CON ID USUARIO */
message GetAllVentasByUsuarioIdRequest{
	string idUsuario = 1;
}

/* DEVUELVE LISTA DE USUARIOS */
message LisTransaccionDTO{
	repeated TransaccionDTO transacciones = 1;
	ServerResponse response = 2;
}

/* METODOS PARA CONSUMIR */
service Registro{
	rpc addRegistro (TransaccionDTO) returns (ServerResponse);
	rpc getAllComprasByUsuarioIdRequest (GetAllComprasByUsuarioIdRequest) returns (LisTransaccionDTO);
	rpc getAllVentasByUsuarioIdRequest (GetAllVentasByUsuarioIdRequest) returns (LisTransaccionDTO);
}